# esp-gfps-example

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/embedded/: CMakeLists.txt
components/embedded/include/: embedded.hpp
components/embedded/src/: nearby_audio.cpp  nearby_battery.cpp  nearby_ble.cpp  nearby_bt.cpp  nearby_persistence.cpp  nearby_platform.cpp  nearby_se.cpp  nearby_trace.cpp
main/: Kconfig.projbuild  main.cpp
